# langchainx

./: .env.example  .envrc  .gitignore  .nuenv.example  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md
.claude/: skills
.ctx/: HANDOFF.langchainx.langchainx.yaml
.devcontainer/: devcontainer.json  post-create.sh
.githooks/: commit-msg  pre-commit  pre-push  prepare-commit-msg
crates/langchainx-agent/: Cargo.toml
crates/langchainx-agent/src/: agent.rs  error.rs  executor.rs
crates/langchainx-agent/src/chat/: builder.rs  chat_agent.rs  output_parser.rs  prompt.rs
crates/langchainx-agent/src/open_ai_tools/: agent.rs  builder.rs
crates/langchainx-chain/: Cargo.toml
crates/langchainx-chain/src/: chain.rs  chain_trait.rs  lib.rs  llm_chain.rs  options.rs  question_answering.rs
crates/langchainx-chain/src/conversational/: builder.rs  mod.rs
crates/langchainx-chain/src/conversational_retrieval_qa/: builder.rs  conversational_retrieval_qa.rs
crates/langchainx-chain/src/sequential/: chain.rs
crates/langchainx-chain/src/sql_datbase/: builder.rs  chain.rs
crates/langchainx-chain/src/stuff_documents/: builder.rs  chain.rs
crates/langchainx-chain/src/test_utils/: fake_llm.rs  mod.rs  temp_workspace.rs
crates/langchainx-core/: Cargo.toml
crates/langchainx-core/src/: error.rs  errors.rs  lib.rs  tools.rs
crates/langchainx-core/src/language_models/: mod.rs
crates/langchainx-core/src/schemas/: agent.rs  messages.rs  mod.rs  prompt.rs  stream.rs
crates/langchainx-core/src/utils/: mod.rs
crates/langchainx-embedding/: Cargo.toml
crates/langchainx-embedding/src/: lib.rs
crates/langchainx-embedding/src/embedding/: mod.rs
crates/langchainx-embedding/src/embedding/mistralai/: mistralai_embedder.rs
crates/langchainx-embedding/src/embedding/ollama/: ollama_embedder.rs
crates/langchainx-embedding/src/embedding/openai/: openai_embedder.rs
crates/langchainx-llm/: Cargo.toml
crates/langchainx-llm/src/: lib.rs  mod.rs
crates/langchainx-llm/src/claude/: client.rs
crates/langchainx-llm/src/deepseek/: client.rs  models.rs
crates/langchainx-llm/src/language_models/: error.rs  mod.rs  options.rs
crates/langchainx-llm/src/ollama/: client.rs
crates/langchainx-llm/src/openai/: mod.rs
crates/langchainx-llm/src/qwen/: client.rs  models.rs
crates/langchainx-llm/src/schemas/: mod.rs  tools_openai_like.rs
crates/langchainx-loaders/: Cargo.toml
crates/langchainx-loaders/src/: csv_loader.rs  dir_loader.rs  document_loader.rs  error.rs  git_commit_loader.rs  html_loader.rs  html_to_markdown_loader.rs  json_loader.rs  lib.rs  markdown_loader.rs  markdown_serializer.rs  obsidian_loader.rs  pandoc_loader.rs  rss_loader.rs  sitemap_loader.rs  text_loader.rs
crates/langchainx-loaders/src/pdf_loader/: lo_loader.rs  mod.rs  pdf_extract_loader.rs
crates/langchainx-loaders/src/source_code_loader/: language_parsers.rs  source_code_loader.rs
crates/langchainx-memory/: Cargo.toml
crates/langchainx-memory/src/: dummy_memory.rs  lib.rs  simple_memory.rs  window_buffer.rs
crates/langchainx-output-parsers/: Cargo.toml
crates/langchainx-output-parsers/src/: markdown_parser.rs
crates/langchainx-prompt/: Cargo.toml
crates/langchainx-prompt/src/: lib.rs
crates/langchainx-prompt/src/prompt/: chat.rs  mod.rs
crates/langchainx-semantic-router/: Cargo.toml
crates/langchainx-semantic-router/src/index/: index.rs  memory_index.rs
crates/langchainx-semantic-router/src/route_layer/: builder.rs  error.rs  route_layer.rs
crates/langchainx-text-splitter/: Cargo.toml
crates/langchainx-text-splitter/src/: lib.rs  markdown.rs  options.rs  plain_text.rs  splitter.rs  token.rs
crates/langchainx-tools/: Cargo.toml
crates/langchainx-tools/src/: lib.rs  tool.rs
crates/langchainx-tools/src/code/: bash.rs  edit_file.rs  glob.rs  grep.rs  mod.rs  nu.rs  read_file.rs  write_file.rs
crates/langchainx-tools/src/command_executor/: command_executor.rs
crates/langchainx-tools/src/confluence/: mod.rs
crates/langchainx-tools/src/duckduckgo/: duckduckgo_search.rs
crates/langchainx-tools/src/google/: mod.rs
crates/langchainx-tools/src/google/bq/: mod.rs
crates/langchainx-tools/src/jira/: mod.rs
crates/langchainx-tools/src/minibox/: mod.rs
crates/langchainx-tools/src/scraper/: scraper.rs
crates/langchainx-tools/src/serpapi/: serpapi.rs
crates/langchainx-tools/src/sql/: sql.rs
crates/langchainx-tools/src/sql/postgres/: postgres.rs
crates/langchainx-tools/src/text2speech/: mod.rs
crates/langchainx-tools/src/text2speech/openai/: client.rs
crates/langchainx-tools/src/wolfram/: wolfram.rs
crates/langchainx-vectorstore/: Cargo.toml
crates/langchainx-vectorstore/src/: error.rs  lib.rs  options.rs  vectorstore.rs
crates/langchainx-vectorstore/src/opensearch/: builder.rs  opensearch.rs
crates/langchainx-vectorstore/src/pgvector/: builder.rs  pgvector.rs
crates/langchainx-vectorstore/src/qdrant/: builder.rs  qdrant.rs
crates/langchainx-vectorstore/src/sqlite_vec/: builder.rs  sqlite_vec.rs
crates/langchainx-vectorstore/src/sqlite_vss/: builder.rs  sqlite_vss.rs
crates/langchainx-vectorstore/src/surrealdb/: builder.rs  surrealdb.rs
docs/: dev-setup.md
examples/: agent.rs  ci_fix_agent.rs  conversational_chain.rs  conversational_retriever_chain_with_vector_store.rs  conversational_retriever_simple_chain.rs  dynamic_semantic_routes.rs  embedding_azure_open_ai.rs  embedding_fastembed.rs  embedding_mistralai.rs  embedding_ollama.rs  embedding_openai.rs  git_commits.rs  llm_alibaba_qwen.rs  llm_anthropic_claude.rs  llm_azure_open_ai.rs  llm_chain.rs  llm_chain_deepseek.rs  llm_chain_qwen.rs  llm_deepseek.rs  llm_deepseek_advanced.rs  llm_ollama.rs  llm_openai.rs  llm_qwen_advanced.rs  open_ai_tools_agent.rs  qa_chain.rs  rcommiter.rs  semantic_routes.rs  sequential_chain.rs  simple_chain.rs  speech2text_openai.rs  sql_chain.rs  streaming_from_chain.rs  text_to_speech.rs  vector_store_opensearch.rs  vector_store_postgres.rs  vector_store_qdrant.rs  vector_store_sqlite_vec.rs  vector_store_sqlite_vss.rs  vision_llm_chain.rs  (+1 more)
(+153 files in other folders)
