[workspace]
resolver = "2"
members = [
    "crates/langchainx-core",
    "crates/langchainx-llm",
    "crates/langchainx-memory",
    "crates/langchainx-output-parsers",
    "crates/langchainx-prompt",
    "crates/langchainx-embedding",
    "crates/langchainx-chain",
    "crates/langchainx-text-splitter",
    "crates/langchainx-vectorstore",
    "examples/vector_store_surrealdb",
    "xtask",
]

[workspace.package]
version     = "0.4.5"
edition     = "2024"
license     = "MIT"
repository  = "https://github.com/89jobrien/langchainx"

[package]
name = "langchainx"
version.workspace = true
edition.workspace = true
publish = true
repository = "https://github.com/89jobrien/langchainx"
license = "MIT"
description = "LangChain for Rust — langchainx fork with typed errors and e2e test suite"
keywords = ["chain", "chatgpt", "llm", "langchain"]
documentation = "https://github.com/89jobrien/langchainx"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
langchainx-core          = { path = "crates/langchainx-core" }
langchainx-embedding     = { path = "crates/langchainx-embedding" }
langchainx-text-splitter = { path = "crates/langchainx-text-splitter" }
langchainx-vectorstore   = { path = "crates/langchainx-vectorstore" }
scraper = "0.21"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.80"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde_json = "1.0"
futures = "0.3"
regex = "1.10.4"
log = "0.4.21"
html-escape = "0.2.13"
reqwest-eventsource = "0.6.0"
async-openai = "0.28.1"
mockito = "1.4.0"
tiktoken-rs = "0.5.8"
sqlx = { version = "0.8.0", default-features = false, features = [
    "postgres",
    "sqlite",
    "runtime-tokio-native-tls",
    "json",
    "uuid",
], optional = true }
uuid = { version = "1.8.0", features = ["v4"], optional = true }
pgvector = { version = "0.4.0", features = [
    "postgres",
    "sqlx",
], optional = true }
text-splitter = { version = "0.17", features = ["tiktoken-rs", "markdown"] }
surrealdb = { version = "2.0.2", optional = true, default-features = false }
csv = "1.3.0"
urlencoding = "2.1.3"
lopdf = { version = "0.34.0", features = ["nom_parser"], optional = true }
pdf-extract = { version = "0.7.8", optional = true  }
thiserror = "2.0.0"
futures-util = "0.3.30"
async-stream = "0.3.5"
tokio-stream = "0.1.15"
secrecy = { version = "0.10.3", features = ["serde"] }
readability = "0.3.0"
htmd = { version = "0.1", optional = true }
url = "2.5.0"
fastembed = { version = "4", optional = true }
flume = { version = "0.11.0", optional = true }
gix = { version = "0.68.0", default-features = false, optional = true, features = [
    "parallel",
    "revision",
    "serde",
] }
opensearch = { version = "2", optional = true, features = ["aws-auth"] }
aws-config = { version = "1.2", optional = true, features = [
    "behavior-version-latest",
] }
glob = "0.3.1"
strum_macros = "0.27.0"
async-recursion = "1.1.0"
tree-sitter = { version = "0.25", optional = true }
tree-sitter-c = { version = "0.23", optional = true }
tree-sitter-c-sharp = { version = "0.23", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.23", optional = true }
tree-sitter-java = { version = "0.23", optional = true }
tree-sitter-javascript = { version = "0.23", optional = true }
tree-sitter-kotlin-ng = { version = "1.1", optional = true }
tree-sitter-python = { version = "0.23", optional = true }
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-scala = { version = "0.23", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
qdrant-client = { version = "1.10.1", optional = true }
ollama-rs = { version = "0.2.0", optional = true, features = [
    "stream",
    "chat-history",
] }
mistralai-client = { version = "0.14.0", optional = true }
rss = { version = "2", optional = true }
quick-xml = { version = "0.36", optional = true }


[features]
default = []
test-utils = []
fastembed = ["dep:fastembed", "langchainx-embedding/fastembed"]
git = ["gix", "flume"]
html-to-markdown = ["dep:htmd"]
mistralai = ["mistralai-client", "langchainx-embedding/mistralai"]
lopdf = ["dep:lopdf"]
pdf-extract = ["dep:lopdf", "dep:pdf-extract"]
ollama = ["ollama-rs", "langchainx-embedding/ollama"]
opensearch = ["dep:opensearch", "aws-config", "langchainx-vectorstore/opensearch"]
postgres = ["pgvector", "sqlx", "uuid", "langchainx-vectorstore/postgres"]
qdrant = ["qdrant-client", "uuid", "langchainx-vectorstore/qdrant"]
sqlite-vss = ["sqlx", "langchainx-vectorstore/sqlite-vss"]
sqlite-vec = ["sqlx", "langchainx-vectorstore/sqlite-vec"]
rss = ["dep:rss"]
sitemap = ["dep:quick-xml"]
surrealdb = ["dep:surrealdb", "langchainx-vectorstore/surrealdb"]
tree-sitter = [
    "cc",
    "dep:tree-sitter",
    "dep:tree-sitter-c",
    "dep:tree-sitter-c-sharp",
    "dep:tree-sitter-cpp",
    "dep:tree-sitter-go",
    "dep:tree-sitter-java",
    "dep:tree-sitter-javascript",
    "dep:tree-sitter-kotlin-ng",
    "dep:tree-sitter-python",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-scala",
    "dep:tree-sitter-typescript",
]

[[test]]
name = "e2e_local_llm"
required-features = ["ollama"]

[dev-dependencies]
base64 = "0.22.1"
serial_test = "3.4.0"
tokio-test = "0.4.4"
tempfile = "3"

[build-dependencies]
cc = { version = "1", optional = true }
