[package]
name = "langchainx-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core schemas, traits, and types for langchainx"

[dependencies]
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
async-trait = "0.1.80"
tokio       = { version = "1", features = ["sync"] }
futures     = "0.3"
