[package]
name = "langchainx-embedding"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Embedding backends for langchainx"

[dependencies]
langchainx-core  = { path = "../langchainx-core" }
async-trait      = "0.1.80"
async-openai     = "0.28.1"
reqwest          = { version = "0.12", features = ["json", "stream"] }
thiserror        = "2.0.0"
serde            = { version = "1.0", features = ["derive"] }
serde_json       = "1.0"
tokio            = { version = "1", features = ["full"] }
url              = "2.5.0"
log              = "0.4.21"

fastembed        = { version = "4", optional = true }
ollama-rs        = { version = "0.2.0", optional = true, features = ["stream", "chat-history"] }
mistralai-client = { version = "0.14.0", optional = true }

[features]
default   = []
fastembed = ["dep:fastembed"]
ollama    = ["dep:ollama-rs"]
mistralai = ["dep:mistralai-client"]
