[package]
name = "langchainx-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "LLM backends and traits for langchainx"

[dependencies]
langchainx-core = { path = "../langchainx-core" }

serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
async-trait    = "0.1.80"
tokio          = { version = "1", features = ["full"] }
futures        = "0.3"
futures-util   = "0.3.30"
async-stream   = "0.3.5"
tokio-stream   = "0.1.15"
reqwest        = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6.0"
async-openai   = "0.28.1"
thiserror      = "2.0.0"
log            = "0.4.21"
secrecy        = { version = "0.10.3", features = ["serde"] }

ollama-rs = { version = "0.2.0", optional = true, features = [
    "stream",
    "chat-history",
] }
mistralai-client = { version = "0.14.0", optional = true }

[features]
default  = []
ollama   = ["dep:ollama-rs"]
mistralai = ["dep:mistralai-client"]
