[package]
name = "langchainx-loaders"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Document loaders for langchainx"

[dependencies]
langchainx-core          = { path = "../langchainx-core" }
langchainx-text-splitter = { path = "../langchainx-text-splitter" }
async-trait   = "0.1.80"
async-stream  = "0.3.5"
tokio         = { version = "1", features = ["full"] }
tokio-stream  = "0.1.15"
futures       = "0.3"
futures-util  = "0.3.30"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1.0"
serde_yaml    = { version = "0.9", optional = true }
thiserror     = "2.0.0"
csv           = "1.3.0"
log           = "0.4.21"
readability   = "0.3.0"
url           = "2.5.0"
glob          = "0.3.1"
strum_macros  = "0.27.0"
async-recursion = "1.1.0"
reqwest       = { version = "0.12", features = ["json", "stream"] }
mockito       = "1.4.0"

# feature-gated
lopdf         = { version = "0.34.0", features = ["nom_parser"], optional = true }
pdf-extract   = { version = "0.7.8", optional = true }
htmd          = { version = "0.1", optional = true }
gix           = { version = "0.68.0", default-features = false, optional = true, features = [
    "parallel",
    "revision",
    "serde",
] }
flume         = { version = "0.11.0", optional = true }
rss           = { version = "2", optional = true }
quick-xml     = { version = "0.36", optional = true }
tree-sitter   = { version = "0.25", optional = true }
tree-sitter-c           = { version = "0.23", optional = true }
tree-sitter-c-sharp     = { version = "0.23", optional = true }
tree-sitter-cpp         = { version = "0.23", optional = true }
tree-sitter-go          = { version = "0.23", optional = true }
tree-sitter-java        = { version = "0.23", optional = true }
tree-sitter-javascript  = { version = "0.23", optional = true }
tree-sitter-kotlin-ng   = { version = "1.1", optional = true }
tree-sitter-python      = { version = "0.23", optional = true }
tree-sitter-rust        = { version = "0.24", optional = true }
tree-sitter-scala       = { version = "0.23", optional = true }
tree-sitter-typescript  = { version = "0.23", optional = true }

[dev-dependencies]
tokio        = { version = "1", features = ["full"] }
futures-util = "0.3.30"
tempfile     = "3"

[build-dependencies]
cc = { version = "1", optional = true }

[features]
default = []
yaml = ["dep:serde_yaml"]
git = ["gix", "flume"]
html-to-markdown = ["dep:htmd"]
lopdf = ["dep:lopdf"]
pdf-extract = ["dep:lopdf", "dep:pdf-extract"]
rss = ["dep:rss"]
sitemap = ["dep:quick-xml"]
tree-sitter = [
    "cc",
    "dep:tree-sitter",
    "dep:tree-sitter-c",
    "dep:tree-sitter-c-sharp",
    "dep:tree-sitter-cpp",
    "dep:tree-sitter-go",
    "dep:tree-sitter-java",
    "dep:tree-sitter-javascript",
    "dep:tree-sitter-kotlin-ng",
    "dep:tree-sitter-python",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-scala",
    "dep:tree-sitter-typescript",
]
