[package]
name = "langchainx-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tool traits and implementations for langchainx"

[dependencies]
langchainx-core = { path = "../langchainx-core" }
async-trait     = "0.1.80"
thiserror       = "2.0.0"
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"
log             = "0.4.21"
reqwest         = { version = "0.12", features = ["json"] }
scraper         = "0.21"
regex           = "1.10.4"
glob            = "0.3"
url             = "2.5.0"
urlencoding     = "2.1.3"
async-openai    = "0.28.1"

sqlx = { version = "0.8.0", default-features = false, features = [
    "postgres",
    "sqlite",
    "runtime-tokio-native-tls",
    "json",
    "uuid",
], optional = true }

[dev-dependencies]
tokio    = { version = "1", features = ["full"] }
mockito  = "1.4.0"
tempfile = "3"

[features]
default    = []
postgres   = ["dep:sqlx"]
sqlite-vss = ["dep:sqlx"]
sqlite-vec = ["dep:sqlx"]
bash-tool  = []
nu-tool    = []
